# ga4gh_workflow_clinic_gsoc_2026

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-title.yml  release.yml
src/workflow_clinic/: cli.py  exceptions.py  main.py
src/workflow_clinic/models/: metadata.py  task.py
src/workflow_clinic/parsers/: __init__.py  base.py  nextflow.py  registry.py
tests/: test_cli.py  test_logging.py  test_nextflow_parser.py  test_parser.py  test_workflow_bundle.py
