[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "workflow-clinic"
version = "0.0.1"
description = "AI-Powered Cloudification of Bioinformatics Workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Revaa Rathore", email = "rathorerevaa2007@gmail.com" }]
requires-python = ">=3.12"
keywords = ["bioinformatics", "nextflow", "snakemake", "ga4gh", "cloud", "workflow"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.0",
    "pygithub>=2.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ai = [
    "litellm>=1.0",
    "langchain>=0.2",
    "chromadb>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "litellm>=1.0",
    "langchain>=0.2",
    "chromadb>=0.5",
]

[project.scripts]
workflow-clinic = "workflow_clinic.main:app"

[project.urls]
Homepage = "https://github.com/revaarathore11/ga4gh_workflow_clinic_gsoc_2026-"
Issues = "https://github.com/revaarathore11/ga4gh_workflow_clinic_gsoc_2026-/issues"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff (Linter + Formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["workflow_clinic"]

# --- Mypy (Type Checker) ---
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
